@@ -2,7 +2,7 @@
 
     This is dvipdfmx, an eXtended version of dvipdfm by Mark A. Wicks.
 
-    Copyright (C) 2002 by Jin-Hwan Cho and Shunsaku Hirata,
+    Copyright (C) 2002-2015 by Jin-Hwan Cho and Shunsaku Hirata,
     the dvipdfmx project team <dvipdfmx@project.ktug.or.kr>
     
     Copyright (C) 1998, 1999 by Mark A. Wicks <mwicks@kettering.edu>
@@ -40,8 +40,6 @@ int mfclose (FILE *file, const char *function, int line);
 #define MFOPEN(name,mode) fopen((name),(mode))
 #define MFCLOSE(file) fclose(file)
 #endif
-
-extern UNSIGNED_BYTE read_byte (FILE *);
 
 extern void seek_absolute (FILE *file, long pos);
 extern void seek_relative (FILE *file, long pos);
